Added_links2Projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
             </h2>
             <div class="projects-grid">
                 <div class="grid-subsection">
-                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024">
+                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024/TributePage">
                         <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project-img" class="project-img">
                         <p class="project-title">
                         <span class="code">&lt;</span>
@@ -33,7 +33,7 @@
                     </a>
                 </div>
                 <div class="grid-subsection">
-                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024">
+                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024/SurveyForm">
                         <img src="https://img.freepik.com/free-vector/online-survey-tablet_3446-296.jpg?w=2000">
                         <p class="project-title">
                             <span class="code">&lt;</span>
@@ -43,7 +43,7 @@
                     </a>
                 </div>
                 <div class="grid-subsection">
-                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024">
+                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024/ProductLandingPage">
                         <img src="https://img.freepik.com/free-vector/business-landing-page-with-photo_52683-22912.jpg">                       
                         <p class="project-title">
                             <span class="code">&lt;</span>
@@ -53,7 +53,7 @@
                     </a>
                 </div>
                 <div class="grid-subsection">
-                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024">
+                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024/TechnicalDocumentationPage">
                         <img src="https://img.freepik.com/free-vector/online-document-concept-illustration_114360-5563.jpg?w=2000">
                         <p class="project-title">
                             <span class="code">&lt;</span>
@@ -63,7 +63,7 @@
                     </a>
                 </div>
                 <div class="grid-subsection">
-                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024">
+                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024/Portfolio">
                         <img src="https://www.freecodecamp.org/news/content/images/2020/01/all-screens-1.png">
                         <p class="project-title">
                             <span class="code">&lt;</span>
@@ -73,7 +73,7 @@
                     </a>
                 </div>
                 <div class="grid-subsection">
-                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024">
+                    <a class="project-tile" target="_blank" href="https://github.com/Ganesh2024/YouTube-Clone-static">
                         <img src="https://img.freepik.com/premium-vector/youtube-player-with-flat-design_23-2147841932.jpg">
                         <p class="project-title">
                             <span class="code">&lt;</span>
